--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,7 @@
-/* color palette from <https://github.com/vuejs/theme> */
+@import '@fontsource/source-sans-pro';
+@import '@fontsource-variable/chivo-mono';
+@import '@fontsource-variable/azeret-mono';
+
 :root {
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
@@ -58,6 +61,7 @@
   font-weight: normal;
 }
 
+
 body {
   min-height: 100vh;
   color: var(--color-text);
@@ -67,19 +71,7 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family:
-    "JetBrains Mono",
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+    "Source Sans Pro", sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
