--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,5 @@
+@import "./theme.css";
 @import './base.css';
-
 
 #app {
   width: 100%;
@@ -18,7 +18,6 @@ a,
 }
 
 body {
-
   width: 100%;
   height: 100%;
   backdrop-filter: blur(3px);
@@ -36,6 +35,3 @@ body {
     background-color: hsla(160, 100%, 37%, 0.2);
   }
 }
-
-
-
